@@ -41,6 +41,7 @@
 #include "cong-traversal-node.h"
 #include "cong-editor-line-manager.h"
 #include "cong-editor-line-manager-simple.h"
+#include "cong-editor-area-lines.h"
 
 #define SHOW_CURSOR_SPEW 0
 #define DEBUG_IM_CONTEXT 1
@@ -369,7 +370,7 @@ cong_editor_widget3_construct (CongEditorWidget3 *editor_widget,
 
 	/* Set up root area: */
 	{
-		PRIVATE(editor_widget)->root_area = cong_editor_area_bin_new (editor_widget);
+		PRIVATE(editor_widget)->root_area = cong_editor_area_lines_new (editor_widget);
 	
 		g_signal_connect (G_OBJECT(PRIVATE(editor_widget)->root_area),
 				  "flush_requisition_cache",
