@@ -1,5 +1,9 @@
 2004-01-19  Dave Malcolm  <david@davemalcolm.demon.co.uk>
 
+	* cong-editor-line-manager-simple.c, cong-editor-node.c, cong-editor-widget3.c
+
+	Visual improvements to the layout of the new implementation, trying to match the spacings of the old one
+	
 	* cong-editor-area-lines.c, cong-editor-area-lines.h, Makefile.am
 
 	New files: subclass of CongEditorArea representing a collection of lines
